# MyMoney

./: .bazelrc  .gitignore  README.md  WORKSPACE  WORKSPACE.bazel  common.bzl  maven_install.json
.github/workflows/: main.yml
application/: BUILD.bazel  defs.bzl
application/src/main/java/com/lucasharada/mymoneyapplication/: MyMoneyApplication.java
core/: BUILD  defs.bzl
core/src/main/java/com/lucasharada/mymoneycore/: MyMoneyCore.java
core/src/main/java/com/lucasharada/mymoneycore/account/: Account.java  AccountingEntry.java  Credit.java  Debit.java
core/src/main/java/com/lucasharada/mymoneycore/bookkeeping/: Bookkeeper.java  BookkeepingStrategy.java  DoubleEntryBookkeeper.java  JournalEntry.java  SingleEntryBookkeeper.java  Transaction.java
core/src/main/java/com/lucasharada/mymoneycore/statements/: BalanceSheet.java  CashFlowStatement.java  IncomeStatement.java  StatementGenerator.java  StatementGeneratorImpl.java
core/src/main/java/com/lucasharada/mymoneycore/wallet/: Wallet.java
core/src/test/java/com/lucasharada/mymoneycore/: AccountTest.java  WalletTest.java
